// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CsvImportFields matches snapshot for BMO 1`] = `
<div
  className="CsvImportFields-root-1"
>
  <p
    className="MuiTypography-root-3 MuiTypography-body1-12 MuiTypography-gutterBottom-30"
  >
    Fill out the following field
  </p>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-49 MuiFormLabel-filled-53 MuiInputLabel-root-42 MuiInputLabel-formControl-43 MuiInputLabel-animated-46 MuiInputLabel-shrink-45"
      data-shrink={true}
    >
      Currency
    </label>
    <div
      className="MuiInputBase-root-69 MuiInput-root-56 MuiInput-underline-60 MuiInputBase-formControl-70 MuiInput-formControl-57"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Currency"
        className="MuiInputBase-input-79 MuiInput-input-64"
        disabled={false}
        maxLength={6}
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
        value="CAD"
      />
    </div>
  </div>
</div>
`;

exports[`CsvImportFields matches snapshot for TD 1`] = `
<div
  className="CsvImportFields-root-1"
>
  <p
    className="MuiTypography-root-3 MuiTypography-body1-12 MuiTypography-gutterBottom-30"
  >
    A few things are missing from the CSV file
  </p>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-49 MuiInputLabel-root-42 MuiInputLabel-formControl-43 MuiInputLabel-animated-46"
      data-shrink={false}
    >
      Account
    </label>
    <div
      className="MuiInputBase-root-69 MuiInput-root-56 MuiInput-underline-60 MuiInputBase-formControl-70 MuiInput-formControl-57"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Account"
        className="MuiInputBase-input-79 MuiInput-input-64"
        disabled={false}
        maxLength={100}
        name="account"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
      />
    </div>
    <p
      className="MuiFormHelperText-root-86"
    >
      The name of the account (e.g. Checking, Savings, RRSP, etc)
    </p>
  </div>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-49 MuiFormLabel-filled-53 MuiInputLabel-root-42 MuiInputLabel-formControl-43 MuiInputLabel-animated-46 MuiInputLabel-shrink-45"
      data-shrink={true}
    >
      Currency
    </label>
    <div
      className="MuiInputBase-root-69 MuiInput-root-56 MuiInput-underline-60 MuiInputBase-formControl-70 MuiInput-formControl-57"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Currency"
        className="MuiInputBase-input-79 MuiInput-input-64"
        disabled={false}
        maxLength={6}
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
        value="CAD"
      />
    </div>
  </div>
</div>
`;

exports[`CsvImportFields matches snapshot for Tangerine 1`] = `
<div
  className="CsvImportFields-root-1"
>
  <p
    className="MuiTypography-root-3 MuiTypography-body1-12 MuiTypography-gutterBottom-30"
  >
    A few things are missing from the CSV file
  </p>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-49 MuiInputLabel-root-42 MuiInputLabel-formControl-43 MuiInputLabel-animated-46"
      data-shrink={false}
    >
      Account
    </label>
    <div
      className="MuiInputBase-root-69 MuiInput-root-56 MuiInput-underline-60 MuiInputBase-formControl-70 MuiInput-formControl-57"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Account"
        className="MuiInputBase-input-79 MuiInput-input-64"
        disabled={false}
        maxLength={100}
        name="account"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
      />
    </div>
    <p
      className="MuiFormHelperText-root-86"
    >
      The name of the account (e.g. Checking, Savings, RRSP, etc)
    </p>
  </div>
  <div
    className="MuiFormControl-root-38 CsvImportFields-textField-2"
  >
    <label
      className="MuiFormLabel-root-49 MuiFormLabel-filled-53 MuiInputLabel-root-42 MuiInputLabel-formControl-43 MuiInputLabel-animated-46 MuiInputLabel-shrink-45"
      data-shrink={true}
    >
      Currency
    </label>
    <div
      className="MuiInputBase-root-69 MuiInput-root-56 MuiInput-underline-60 MuiInputBase-formControl-70 MuiInput-formControl-57"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        aria-label="Currency"
        className="MuiInputBase-input-79 MuiInput-input-64"
        disabled={false}
        maxLength={6}
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="text"
        value="CAD"
      />
    </div>
  </div>
</div>
`;
